Adding our base HTML pages.

--- a/index.html
+++ b/index.html
@@ -4,5 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Comic Characters R Us</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <title>Marvel Character Universe</title>
   </head>
+
+  <body>
+    <header>
+      <h1>Marvel Character Universe</h1>
+      <p>A Comprehensive History Guide To All Your Favorite (and Unknown) Marvel Characters!</p>
+    </header>
+
+    <nav>
+      <a href="char.html">Character Search</a> 
+      <a href="omdb.html">Productions Search</a> 
+      <a href="#">Link 3</a>
+    </nav>
+
+    <main>
+      <aside>
+        <h2>This is a sidebar.</h2>
+        <div class="sample-img">Image</div>
+        <!-- <p>
+          It will stack BELOW the body once the screen hits 768px or smaller.
+        </p> -->
+      </aside>
+
+      <section>
+        <h2>This is the body.</h2>
+        <div class="sample-img">Image</div>
+        <!-- <p>
+          It will stack on top of the sidebar once the screen hits 768px or
+          smaller.
+        </p> -->
+      </section>
+    </main>
+
+    <footer>
+      <h3>
+        Open Chrome DevTools --> Toggle device toolbar --> Resize the browser
+        window!
+      </h3>
+    </footer>
+  </body>
+</html>
