--- a/index.html
+++ b/index.html
@@ -24,25 +24,23 @@
       <aside>
         <h2>This is a sidebar.</h2>
         <div class="sample-img">Image</div>
-        <!-- <p>
+        <p>
           It will stack BELOW the body once the screen hits 768px or smaller.
-        </p> -->
+        </p>
       </aside>
 
       <section>
-        <h2>This is the body.</h2>
-        <div class="sample-img">Image</div>
-        <!-- <p>
-          It will stack on top of the sidebar once the screen hits 768px or
-          smaller.
-        </p> -->
+        <h2>Our Mission</h2>
+        <!-- <div class="sample-img">Image</div> -->
+        <p>
+          The Website Provides a Comprehensive list of Superheroes, villians and other Characters from the Marvel Universe.
+        </p>
       </section>
     </main>
 
     <footer>
       <h3>
-        Open Chrome DevTools --> Toggle device toolbar --> Resize the browser
-        window!
+        Follow Marvel
       </h3>
     </footer>
   </body>
