Adding bootstrap commands to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <title>Marvel Character Universe</title>
   </head>
 
@@ -20,7 +21,10 @@
       <a href="#">Link 3</a>
     </nav>
 
-    <main>
+    <main class="d-flex min-vh-100">
+      <!-- <div class="container"></div>
+      <div class="row">
+      <div class="col-12 col-md-6"></div> -->
       <aside>
         <h2>This is a sidebar.</h2>
         <div class="sample-img">Image</div>
