completing char.js and correcting char.html

--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Marvel Character Universe</title>
   </head>
 
   <body>
     <header>
       <h1>Marvel Character Universe</h1>
-      <p>A Comprehensive History Guide To All Your Favorite (and Unknown) Marvel Characters!</p>
     </header>
 
     <nav>
       <a href="char.html">Character Search</a> 
       <a href="omdb.html">Productions Search</a> 
-      <a href="#">Link 3</a>
+      <a href="about.html">Meet the Team</a>
     </nav>
 
     <main class="d-flex min-vh-100">
@@ -26,18 +29,18 @@
       <div class="row">
       <div class="col-12 col-md-6"></div> -->
       <aside>
-        <h2>This is a sidebar.</h2>
-        <div class="sample-img">Image</div>
-        <p>
-          It will stack BELOW the body once the screen hits 768px or smaller.
-        </p>
+        <h2> </h2>
+        <div class="marvel-img"></div>
+        <img src="assets/images/marvelcharacters.jpeg"/>
       </aside>
 
       <section>
-        <h2>Our Mission</h2>
+        <h1>Our Mission</h1>
         <!-- <div class="sample-img">Image</div> -->
         <p>
-          The Website Provides a Comprehensive list of Superheroes, villians and other Characters from the Marvel Universe.
+        <h2>The website provides a comprehensive list of Superheroes, villians and other characters from the Marvel Universe.
+        </h2>
+        <h2>Search your favorite character to find out more!</h2>
         </p>
       </section>
     </main>
@@ -46,6 +49,10 @@
       <h3>
         Follow Marvel
       </h3>
+      <a href="https://www.facebook.com/Marvel/" class="fa fa-facebook"></a>
+      <a href="https://www.youtube.com/marvel" class="fa fa-youtube"></a>
+      <a href="https://www.instagram.com/marvel/" class="fa fa-instagram">
+        <a>
     </footer>
   </body>
 </html>
