--- a/movies.html
+++ b/movies.html
@@ -7,23 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-  <title>Production Search</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/stylecard.css">
+  <title>Character Search</title>
 </head>
 
-<body class="flex-column min-100-vh">
+<body>
   <header class="hero">
-    <p>Search for Past Productions to see a list of repositories they have!
+    <p>Search for a Marvel Character to see their biography!
     </p>
   </header>
 
-
-  <main class="flex-row justify-space-between">
+<main>
     <div class="col-12 col-md-4">
 
       <div class="card">
         <h3 class="card-header text-uppercase">Search By Character</h3>
         <form id="user-form" class="card-body">
-          <label class="form-label" for="username">Character</label>
+          <label class="form-label" for="username">Enter Character Name</label>
           <input name="username" id="username" type="text" autofocus="true" class="form-input" />
           <button type="submit" class="btn">Get Character</button>
         </form>
@@ -31,12 +32,15 @@
     </div>
 
     <div class="col-12 col-md-8">
-      <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
-      <div id="repos-container" class="list-group"></div>
+      <div id="superheroes-list"></div>
+      <!-- <h2 class="subtitle">Showing Your Character's Story: <span id="repo-search-term"></span></h2>
+      <div id="repos-container" class="list-group"></div> -->
     </div>
   </main>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="./assets/javascript/movies.js"></script>
 
-  <script src="./assets/javascript/char.js"></script>
+  <button id="go-back-button">Go Back</button>
 </body>
 
 </html>
