attempt to have movie api work

--- a/movies.html
+++ b/movies.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="hero">
-    <p>Search for a Marvel Character to see their biography!
+    <p>Search for a movie for more details!
     </p>
   </header>
 
@@ -22,11 +22,11 @@
     <div class="col-12 col-md-4">
 
       <div class="card">
-        <h3 class="card-header text-uppercase">Search By Character</h3>
+        <h3 class="card-header text-uppercase">Search By Movie</h3>
         <form id="user-form" class="card-body">
-          <label class="form-label" for="username">Enter Character Name</label>
+          <label class="form-label" for="username">Enter Movie Title</label>
           <input name="username" id="username" type="text" autofocus="true" class="form-input" />
-          <button type="submit" class="btn">Get Character</button>
+          <button type="submit" class="btn">Get Movie</button>
         </form>
       </div>
     </div>
