adding comments and update to movie.js and movie.html

--- a/index.html
+++ b/index.html
@@ -10,24 +10,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Marvel Character Universe</title>
+    <title>Comic Character Universe</title>
   </head>
 
   <body>
     <header>
-      <h1>Marvel Character Universe</h1>
+      <h1>Comic Character Universe</h1>
     </header>
-
+<!-- Link bar -->
     <nav>
       <a href="char.html">Character Search</a> 
-      <a href="omdb.html">Productions Search</a> 
+      <a href="movies.html">Productions Search</a> 
       <a href="about.html">Meet the Team</a>
     </nav>
-
+<!-- Bootstrap code to eliminate whitespace -->
     <main class="d-flex min-vh-100">
-      <!-- <div class="container"></div>
-      <div class="row">
-      <div class="col-12 col-md-6"></div> -->
+
       <aside>
         <h2> </h2>
         <div class="marvel-img"></div>
@@ -36,15 +34,14 @@
 
       <section>
         <h1>Our Mission</h1>
-        <!-- <div class="sample-img">Image</div> -->
         <p>
-        <h2>The website provides a comprehensive list of Superheroes, villians and other characters from the Marvel Universe.
+        <h2>The website provides a comprehensive list of Superheroes, villians and other characters from the Comic Book Universe.
         </h2>
         <h2>Search your favorite character to find out more!</h2>
         </p>
       </section>
     </main>
-
+<!-- added in Marvel social media links -->
     <footer>
       <h3>
         Follow Marvel
