--- a/char.html
+++ b/char.html
@@ -14,18 +14,20 @@
 
 <body>
   <header class="hero">
-    <p>Search for a Marvel Character to see their biography!
+    <p>Search for a Comic Character to see their stats!
     </p>
   </header>
 
 <main>
+  <!-- Bootstrap code to incorporate multiple screen sizes -->
     <div class="col-12 col-md-4">
 
       <div class="card">
         <h3 class="card-header text-uppercase">Search By Character</h3>
         <form id="user-form" class="card-body">
-          <label class="form-label" for="username">Enter Character Name</label>
-          <input name="username" id="username" type="text" autofocus="true" class="form-input" />
+          <label class="form-label" for="charName">Enter Character Name</label>
+          <input name="charName" id="charName" type="text" autofocus="true" class="form-input" />
+          <!-- Generating button to search character -->
           <button type="submit" class="btn">Get Character</button>
         </form>
       </div>
@@ -33,14 +35,12 @@
 
     <div class="col-12 col-md-8">
       <div id="superheroes-list"></div>
-      <!-- <h2 class="subtitle">Showing Your Character's Story: <span id="repo-search-term"></span></h2>
-      <div id="repos-container" class="list-group"></div> -->
     </div>
   </main>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="./assets/javascript/char.js"></script>
 
-  <button id="go-back-button">Go Back</button>
+  <!-- <button id="go-back-button">Go Back</button> -->
 </body>
 
 </html>
