--- a/movies.html
+++ b/movies.html
@@ -1,46 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/stylecard.css">
-  <title>Character Search</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Search</title>
 </head>
-
 <body>
-  <header class="hero">
-    <p>Search for a movie for more details!
-    </p>
-  </header>
-
-<main>
-    <div class="col-12 col-md-4">
-
-      <div class="card">
-        <h3 class="card-header text-uppercase">Search By Movie</h3>
-        <form id="user-form" class="card-body">
-          <label class="form-label" for="username">Enter Movie Title</label>
-          <input name="username" id="username" type="text" autofocus="true" class="form-input" />
-          <button type="submit" class="btn">Get Movie</button>
+    <header>
+        <h1>Movie Search</h1>
+    </header>
+    <main>
+        <form id="search-form">
+            <input type="text" id="search-input" placeholder="Search for a movie...">
+            <button type="submit">Search</button>
         </form>
-      </div>
-    </div>
-
-    <div class="col-12 col-md-8">
-      <div id="superheroes-list"></div>
-      <!-- <h2 class="subtitle">Showing Your Character's Story: <span id="repo-search-term"></span></h2>
-      <div id="repos-container" class="list-group"></div> -->
-    </div>
-  </main>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./assets/javascript/movies.js"></script>
-
-  <button id="go-back-button">Go Back</button>
+        <div id="movies-container"></div>
+    </main>
+    <script src="./assets/javascript/movies.js"></script>
 </body>
-
 </html>
